# bottled-ai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.iss
dependencies/: CMakeLists.txt
devtools/: build.py  copy_stuff.py  run.py
python_stuff/: dependencies.py  entrypoint.py  requirements-torch.txt  requirements.txt
python_stuff/models/: downloader.py  inference.py  listing.py  loader.py  paths.py
python_stuff/text_helper/: text_helper.py
src/: CMakeLists.txt  main.cpp
src/config/: config.cpp  config.h
src/console/: console.cpp  console.h  console_tabs.cpp  console_tabs.h  emulated_terminal.cpp  emulated_terminal.h
src/controls/: button.cpp  button.h
src/data/: chat_store.cpp  chat_store.h  event_manager.cpp  event_manager.h  xpm.cpp  xpm.h
src/dialogs/: common_dialogs.cpp  common_dialogs.h  size_dialog.cpp  size_dialog.h
src/entry-point/: entrypoint.cpp
src/python/: helpers.cpp  helpers.h  utils.cpp  utils.h  wrapper.cpp  wrapper.h
src/windows/: config_window.cpp  config_window.h  console_viewer.cpp  console_viewer.h  downloader.cpp  downloader.h  main_menu.cpp  main_menu.h  main_window.cpp  main_window.h  modal_window.cpp  modal_window.h  model_config.cpp  model_config.h  progress_window.cpp  progress_window.h  splash_screen.cpp  splash_screen.h
